force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/TwilioSF__Opt_In_Keyword__c.object-meta.xml
<CustomObject>
    <label>Opt-In Keyword</label>
    <nameField>
        <label>Keyword</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opt-In Keywords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>