force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/fields/TwilioSF__Total_Inactive__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Total_Inactive__c</fullName>
    <label>Total Inactive</label>
    <summaryFilterItems>
        <field>TwilioSF__Opt_In__c.TwilioSF__Active__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TwilioSF__Opt_In__c.TwilioSF__Opt_In_Keyword__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>