force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/fields/TwilioSF__Total_Opt_In_Records__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Total_Opt_In_Records__c</fullName>
    <label>Total Opt-In Records</label>
    <summaryForeignKey>TwilioSF__Opt_In__c.TwilioSF__Opt_In_Keyword__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>