force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/fields/TwilioSF__Unique_Key_Word__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Unique_Key_Word__c</fullName>
    <label>Unique Key Word</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>