force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/validationRules/TwilioSF__Keyword_Cannot_Contain_a_Space.validationRule-meta.xml
<ValidationRule>
    <fullName>TwilioSF__Keyword_Cannot_Contain_a_Space</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Name, &quot; &quot;)</errorConditionFormula>
    <errorMessage>A keyword cannot contain any spaces.</errorMessage>
</ValidationRule>