force-app/main/default/objects/TwilioSF__Opt_In_Keyword__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Total_Opt_In_Records__c</columns>
    <columns>TwilioSF__Total_Active__c</columns>
    <columns>TwilioSF__Total_Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>